--- a/BankersMVC2/Views/Shared/_Layout.cshtml
+++ b/BankersMVC2/Views/Shared/_Layout.cshtml
@@ -24,8 +24,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">User</a>
                         </li>
-                                             
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                        </li>
                     </ul>
                                      
                    </div>
